--- a/AutoMapBankCard/AutoMapBankCard/bin/AutoMapBankCard.dll.config
+++ b/AutoMapBankCard/AutoMapBankCard/bin/AutoMapBankCard.dll.config
@@ -34,4 +34,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="conn" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\KlenToyProject\AutoMapBankCard\AutoMapBankCard\App_Data\BankCard.mdf;Integrated Security=True;Connect Timeout=30" />
+  </connectionStrings>
 </configuration>
