--- a/AutoMapBankCard/AutoMapBankCard/packages.config
+++ b/AutoMapBankCard/AutoMapBankCard/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net48" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="NPOI" version="2.4.1" targetFramework="net48" />
   <package id="SharpZipLib" version="1.0.0" targetFramework="net48" />
 </packages>
