--- a/AutoMapBankCard/AutoMapBankCard/Web.config
+++ b/AutoMapBankCard/AutoMapBankCard/Web.config
@@ -11,7 +11,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.2"/>
     <httpRuntime targetFramework="4.6.2" maxRequestLength="1048576"/>
-    <customErrors defaultRedirect="Error.aspx" mode="On" redirectMode="ResponseRewrite"/>
+    <customErrors defaultRedirect="~/Page/Error.aspx" mode="On" redirectMode="ResponseRewrite"/>
   </system.web>
   <system.codedom>
     <compilers>
