fix the issue that company send a two word name

--- a/AutoMapBankCard/AutoMapBankCard/Web.config
+++ b/AutoMapBankCard/AutoMapBankCard/Web.config
@@ -9,8 +9,8 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6.2"/>
-    <httpRuntime targetFramework="4.6.2" maxRequestLength="1048576"/>
+    <compilation debug="true" targetFramework="4.7.2"/>
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="1048576"/>
     <customErrors defaultRedirect="~/Page/Error.aspx" mode="On" redirectMode="ResponseRewrite"/>
   </system.web>
   <system.codedom>
@@ -36,7 +36,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="conn" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\KlenToyProject\AutoMapBankCard\AutoMapBankCard\App_Data\BankCard.mdf;Integrated Security=True;Connect Timeout=30"/>
+    <add name="conn" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Project_Toys\KlenToyProject\AutoMapBankCard\AutoMapBankCard\App_Data\BankCard.mdf;Integrated Security=True;Connect Timeout=30"/>
   </connectionStrings>
   <appSettings>
     <!-- Test-->
