trace "Value cannot be null. Parameter name: source"

--- a/AutoMapBankCard/AutoMapBankCard/AutoMapBankCard.csproj
+++ b/AutoMapBankCard/AutoMapBankCard/AutoMapBankCard.csproj
@@ -187,6 +187,7 @@
     </Compile>
     <Compile Include="Utility\GeneralUtility.cs" />
     <Compile Include="Utility\HttpRequestUtility.cs" />
+    <Compile Include="Utility\LogUtility.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
